update incorrect file extension name

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <div>
                         <h4>06 鸽子</h4>
                         <p>隐秘的黑洞 肚子里这团滚烫的东西 将要炸裂的宇宙和手指</p>
-                        <img src="剧照/3.jpg" width="310" height="180">
+                        <img src="剧照/3.JPG" width="310" height="180">
                 </div>
 
                 <div>
